Update 1. Limpieza SQL.md

--- a/1. Limpieza SQL.md
+++ b/1. Limpieza SQL.md
@@ -3,7 +3,7 @@ En este archivo pondre los Fragmentos de Codigo mas Significativos que e usaron 
 En el PDF Adjunto se encuentra la misma informacion pero mas detallada con mas imagenes.
 
 Se importaron a SQL Managament Studio utilizando la herramienta de importación de SQL, por lo que muchas Columnas Incluyen valores NULL y/o se pasaron con algún formato de NVARCHAR o TEXT.
-
+![](Imagenes/Select_Tablas.png)
 ## Validacion Id's
 ```sql
 -- Se cambio el Tipo de Dato de los ID’s para trabajarlos como INT.
@@ -120,6 +120,9 @@ FROM   catalogo_animes a
 Se Valdiaron las Columnas con que ppudieran tener valores reprtidos o que se pudieran agrupar con esta consulta, se hizo el mismo proceso para todas,
 unicamente cambiando la columna a revisar. 
 Las columnas Type, Status y  Source estaban bien, no presentaban valores duplicados o que se pudieran Agrupar.
+
+![](Imagenes/Validacion_Columnas.png)
+
 ```sql
 SELECT source,
        Count(DISTINCT source) cant
@@ -131,6 +134,8 @@ ORDER  BY 1;
 ### Columna Duration
 Se observa que hay valores que se pueden agrupar, ya que tienen la misma duración, pero algunos se les agrega la palabra “per episode”, se quitará esta palabra para agrupar más los valores.
 Sobre el mismo query que utilice en el SELECT trabaje el UPDATE, unicamente cambiando la palabra y la condicion. 
+
+![](Imagenes/Columna_Duration_1.png)
 
 ```sql
 -- Quitar la palabra 'per' y poder unificar mas la columna e Duracion
@@ -146,10 +151,13 @@ SELECT *
 FROM   duration;
 --UPDATE duration set duration = Duracion_Correcta;
 
-
 ```
+
+![](Imagenes/Columna_Duration_3.png)
+
 Con la columna DURATION quise crear una columna con el Tiempo en minutos en formato INT, y no en el formato de texto de “1 hora y 20 minutos” por ejemplo que se maneja en el archivo. 
 Usando las Funciones CAST para transformar el Obtenido a Entero, TRIM para quitarle espacios que pudieran quedar, y SUBSTRING – CHARINDEX para obtener los valores separados.
+
 Para las películas que tienen Horas, multiplique el valor que saque primero por 60 para que fueran minutos.
 Los registros que únicamente tienen segundos se transforman y actualizan utilizando las mismas funciones, obteniendo el numero antes del Separados SEC y diviendo entre 60.
 
@@ -226,10 +234,15 @@ SELECT *
 FROM   minutos;
 --UPDATE Minutos set T_Minutos = Minutos;
 ```
+Resultado
+![](Imagenes/Columna_Duration_2.png)
 
 ### Columna FECHAS/FECHA_ESTRENO/FECHA_FIN.
 Validación Columna Fechas, esta columna se va a separar en 2 partes, la primera columna será para la fecha de estreno, y esta misma columna se duplico para cuando el registro tenga fecha Final.
 Para dejar únicamente la fecha de estreno se utilizó esta consulta extrayendo todo lo que se encuentre antes del delimitador “to” que indica que seguía otra fecha, con el UPDATE se actualizarán los valores para dejar lista la columna. Todo lo que no tuviera delimitador “to” se queda igual e indica que solamente hay una fecha en esa columna.
+
+![](Imagenes/Columna_Fechas_1.png)
+
 ```sql
 -- Creacion y llenado de la Columna
 Alter Table Animes ADD Fecha_Fin NVARCHAR(30);
@@ -301,7 +314,9 @@ UPDATE ANIMES SET FECHA_FIN = NULL WHERE Fecha_Fin ='?'
 -- Se pone un Valor NULL a las fechas que tenian la leyenda Not Aviable
 UPDATE ANIMES SET FECHA_FIN = NULL, Fecha_Estreno=null WHERE 
 (Fecha_Fin ='Not available' or Fecha_Estreno = 'Not available')
-
+```
+Formato Fechas YYYY
+```SQL
 -- Validacion Fechas Formato YYYY
 WITH largo
      AS (SELECT anime_id,
@@ -317,9 +332,11 @@ SELECT *
 FROM   largo
 WHERE  largo_ff = 4
        AND largo_ff IS NULL 
+```
+![](Imagenes/Columna_Fechas_YYYY.png)
 
 FORMATO FECHA MMM-YY
-
+```sqL
 Arma la fecha  correcta, compara los digitos del año (Ultimos 2), si son menores 25 se 
 le concatena un 20 y el dia 01. Para formar por ejemplo MES 1, 2005
 Contrario, se le concatena un 19 y el día 01. Para formar por ejemplo MES 1, 1999
@@ -344,7 +361,10 @@ WITH largo
 SELECT *
 FROM   largo
 WHERE  largo_ff = 18 -- Se cambia la condicion depedniendo si es FF o FI
+```
+![](Imagenes/Columna_Fechas_MMM_YY.png)
 
+```sqL
 -- Formato Fecha MMM YYYY
 WITH largo
      AS (SELECT anime_id,
@@ -360,7 +380,10 @@ SELECT *
 FROM   largo
 WHERE  largo_fi = 8
        AND largo_ff IS NULL; 
+```
+![](Imagenes/Columna_Fechas_MMM_YYYY.png)
 
+```SQL
 -- Validacion
 Select ConverT(date,fecha_fin,101), cast(fecha_estreno as date) from animes
 
@@ -419,3 +442,4 @@ SET    temporada = ( CASE
 
 
 ```
+![](Imagenes/Estaciones_Final.png)
