--- a/2. Dashboard_Power_BI.md
+++ b/2. Dashboard_Power_BI.md
@@ -26,38 +26,46 @@ Se creo una tabla Calendario para poder trabajar con algunos datos de fechas, la
 // Paso 1 Se toma de la Tabla Origen la columna sobre la que se calcularan las fechas.
 = #"Tabla Animes"[Fecha_Estreno]
 ```
+![](Imagenes/TC_1.png)
 
-```visual
+```m
 // Paso 2: Se agrega un paso extra llamado Fecha Min con la fecha deseada.
 // Nota: La tabla comienza desde el año 1920 pero de esa fecha hasta 1970 la informacion no es muy relevante,
 //por lo que se decide omitir.
 01/01/1970
 ```
+![](Imagenes/TC_2.png)
 
-```visual
+```m
 // Paso 3: Se agrega otro paso llamado FechaMax para tomar el Año Maximo que encuentre en la tabla Animes
 //y la columna fecha extreno,y le agregara los valores 12 y 31 haciendo referencia al dia 31 de Dicembre
 = #date(Date.Year(List.Max(Origen)), 12, 31)
 ```
-```visual
+![](Imagenes/TC_3.png)
+
+```m
 Paso 4: Se agrega otro paso y se crea una lista desde el valor de FechaMIN hasta FechaMAX
 = {Number.From(FechaMin)..Number.From(FechaMax)}
 ```
+![](Imagenes/TC_4.png)
+
 Paso 6: Se da a la opcion de convertir Lista a Tabla.
 Paso 7: Se cambia el Tipo de Dato
 Paso 8: Se agregan columnas con la herramienta de Power Query.
+![](Imagenes/TC_5.png)
+![](Imagenes/TC_6.png)
 
 ## Relacionamiento
 Se relaciona la tabla Calendario la columna Fecha con la Columna Fecha_Estreno.
 Y 2 Tablas de Medidas que unicamente contendran las medidas Trabajadas.
-
+![](Imagenes/Relacion_Tablas.png)
 
 ## MEDIDAS
 Se crean con Lenguaje DAX en una Tabla separada dedidcada a Medidas lo basico.
 -  SUM de todas las cantidades
 -  COUNT de Valores
 -  AVG de Valores.
-
+![](Imagenes/Medidas_Basicas.png)
 Otra tabla con medidas mas Especificas.
 -  Cantidad Animes por Score > 4: La utilizo en el Grafico Animes por Promedio, utilizando la Columna Creada Score_Redondeado
 para poder calcular **Cuantos Animes Hay por cada Segmento de Calificaion** tomando en cuenta los que tienen mas de 4 de Calificacion
@@ -68,7 +76,7 @@ CALCULATE (
     FILTER ( 'Tabla Animes', [Score Redondeado] >= 4 )
 )
 ```
-
+![](Imagenes/Score.png)
 -  Promedio Dias Finalizacion: La utilizo en una tarjeta, Indica en promedio, cuantos dias pasan desde que se estrena un Anime hasta que
 Finaliza (Unicamente Animes)
 ```DAX
@@ -137,5 +145,5 @@ DIVIDE (
     [Suma Watching],
     0
 )
-
 ```
+![](Imagenes/Medias.png)
